--- a/Excavator/platformio.ini
+++ b/Excavator/platformio.ini
@@ -8,16 +8,14 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcu]
+[env:esp32dev]
 platform = espressif32
-framework = arduino
 board = esp32dev
+framework = arduino
 board_build.partitions = huge_app.csv
-board_build.mcu = esp32
-board_build.f_cpu = 240000000L
 lib_deps = 
-	jvpernis/PS3 Controller Host@^1.1.0
-	agdl/Base64@^1.0.0
+	madhephaestus/ESP32Servo@^1.2.1
+	adafruit/Adafruit MCP23017 Arduino Library@^2.3.2
 monitor_speed = 115200
-monitor_port = /dev/cu.usbserial-0001
-upload_port = /dev/cu.usbserial-0001
+monitor_port = /dev/cu.usbserial-110
+upload_port = /dev/cu.usbserial-110
